clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr86492.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr86492.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: u32i) -> u32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u32i):
        %42 = alloca u32i, "x", align 4
        %43 = alloca u32i, "__retval", align 4
        %44 = alloca rec_U, "u", align 4
        store %arg0, %42
        %45 = const 0 : u32i
        %46 = get_member %44[0] "r" : u32i*
        store %45, %46, align 4
        %47 = load %42 : u32i, align 4
        %48 = get_member %44[1] "f" : rec_S*
        %49 = get_member %48[0] "c" : u32i*
        %50 = set_bitfield %49, %47, "c": 16 bits @16 in u32i : u32i, align 4
        %51 = const 14 : u32i
        %52 = get_member %44[1] "f" : rec_S*
        %53 = get_member %52[0] "b" : u32i*
        %54 = set_bitfield %53, %51, "b": 4 bits @12 in u32i : u32i, align 4
        %55 = get_member %44[0] "r" : u32i*
        %56 = load %55 : u32i, align 4
        store %56, %43
        %57 = load %43 : u32i
        return %57
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_U, "u", align 4
    %2 = const 0 : s32i
    store %2, %0
    scope {
        %30 = const 8 : s32i
        %31 = const 4 : s32i
        %32 = mul %30, %31 : s32i [nsw]
        %33 = const 32 : s32i
        %34 = cmp ne %32, %33 : bool
        %35 = ternary %34 ? { : bool
            %41 = const true : bool
            yield %41
        } : {
            %38 = const 4 : u64i
            %39 = const 4 : u64i
            %40 = cmp ne %38, %39 : bool
            yield %40
        }
        if %35 {
            %36 = const 0 : s32i
            store %36, %0
            %37 = load %0 : s32i
            return %37
        }
        yield
    }
    %3 = const 114 : u32i
    %4 = call @foo(%3) : u32i [all]
    %5 = get_member %1[0] "r" : u32i*
    store %4, %5, align 4
    scope {
        %8 = get_member %1[1] "f" : rec_S*
        %9 = get_member %8[0] "a" : u32i*
        %10 = get_bitfield %9, "a": 12 bits @0 in u32i : u32i, align 4
        %11 = cast(integral) %10 : s32i
        %12 = const 0 : s32i
        %13 = cmp ne %11, %12 : bool
        %14 = ternary %13 ? { : bool
            %29 = const true : bool
            yield %29
        } : {
            %23 = get_member %1[1] "f" : rec_S*
            %24 = get_member %23[0] "b" : u32i*
            %25 = get_bitfield %24, "b": 4 bits @12 in u32i : u32i, align 4
            %26 = cast(integral) %25 : s32i
            %27 = const 14 : s32i
            %28 = cmp ne %26, %27 : bool
            yield %28
        }
        %15 = ternary %14 ? { : bool
            %22 = const true : bool
            yield %22
        } : {
            %16 = get_member %1[1] "f" : rec_S*
            %17 = get_member %16[0] "c" : u32i*
            %18 = get_bitfield %17, "c": 16 bits @16 in u32i : u32i, align 4
            %19 = cast(integral) %18 : s32i
            %20 = const 114 : s32i
            %21 = cmp ne %19, %20 : bool
            yield %21
        }
        if %15 {
            call @abort() [all]
            yield
        }
        yield
    }
    %6 = const 0 : s32i
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
