clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr86528.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr86528.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[12] = "test1234/./" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[10] = "test1234/" [cir_private, default, align 1, dso_local, constant]
global test.appended : s8i[4] = "/./" [internal, default, align 1, dso_local, constant]

fn memcpy(%arg0: void*, %arg1: void*, %arg2: u64i) -> void* [external, c, nothrow];
fn strcpy(%arg0: s8i*, %arg1: s8i*) -> s8i* [external, c, nothrow];
fn strcmp(%arg0: s8i*, %arg1: s8i*) -> s32i [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn test(%arg0: s8i*, %arg1: u64i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i*, %arg1: u64i):
        %10 = alloca s8i*, "data", align 8
        %11 = alloca u64i, "len", align 8
        %12 = alloca s8i*, "buf", align 8
        store %arg0, %10
        store %arg1, %11
        %13 = get_global @test.appended : s8i[4]*
        %14 = load %11 : u64i, align 8
        %15 = const 4 : u64i
        %16 = add %14, %15 : u64i
        %17 = alloca u8i, "bi_alloca", align 16, dynamic %16
        %18 = cast(bitcast) %17 : void*
        %19 = cast(bitcast) %18 : s8i*
        store %19, %12, align 8
        %20 = load %12 : s8i*, align 8
        %21 = cast(bitcast) %20 : void*
        %22 = load %10 : s8i*, align 8
        %23 = cast(bitcast) %22 : void*
        %24 = load %11 : u64i, align 8
        %25 = call @memcpy(%21, %23, %24) : void* [all]
        %26 = load %12 : s8i*, align 8
        %27 = load %11 : u64i, align 8
        %28 = ptr_stride %26, %27 : s8i*
        %29 = load %11 : u64i, align 8
        %30 = const 1 : u64i
        %31 = sub %29, %30 : u64i
        %32 = load %10 : s8i*, align 8
        %33 = ptr_stride %32, %31 : s8i*
        %34 = load %33 : s8i, align 1
        %35 = cast(integral) %34 : s32i
        %36 = const 47 : s32i
        %37 = cmp eq %35, %36 : bool
        %38 = cast(bool_to_int) %37 : s32i
        %39 = cast(integral) %38 : s64i
        %40 = get_element %13[%39] : s8i*
        %41 = call @strcpy(%28, %40) : s8i* [all]
        scope {
            %42 = load %12 : s8i*, align 8
            %43 = get_global @.str : s8i[12]*
            %44 = cast(array_to_ptrdecay) %43 : s8i*
            %45 = call @strcmp(%42, %44) : s32i [all]
            %46 = cast(int_to_bool) %45 : bool
            if %46 {
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn strlen(%arg0: s8i*) -> u64i [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i*, "arg", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @.str.1 : s8i[10]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    store %4, %1, align 8
    %5 = load %1 : s8i*, align 8
    %6 = load %1 : s8i*, align 8
    %7 = call @strlen(%6) : u64i [all]
    call @test(%5, %7) [all]
    %8 = const 0 : s32i
    store %8, %0
    %9 = load %0 : s32i
    return %9
}
