clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr86659_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr86659-1.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "value1", align 4
        %2 = alloca s32i, "value2", align 4
        %3 = alloca s32i, "value3", align 4
        %4 = alloca u32i, "flag", align 4
        %5 = alloca rec_struct1, "var1", align 8
        %6 = const 0 : s32i
        store %6, %0
        %7 = const 0 : s32i
        store %7, %1, align 4
        %8 = const 0 : s32i
        store %8, %2, align 4
        %9 = const 0 : s32i
        store %9, %3, align 4
        %10 = const 23 : u64i
        get_member
        set_bitfield
        get_member
        get_bitfield
        %15 = cast(integral) %14 : u32i
        store %15, %4, align 4
        get_member
        get_bitfield
        %18 = cast(integral) %17 : s32i
        %19 = cast(int_to_bool) %18 : bool
        %20 = const 10 : s32i
        %21 = const 20 : s32i
        select
        store %22, %1, align 4
        scope {
                get_member
                get_bitfield
                %41 = cast(int_to_bool) %40 : bool
                if %41 {
                        %43 = const 10 : s32i
                        store %43, %2, align 4
                        yield
                } else {
                        %42 = const 20 : s32i
                        store %42, %2, align 4
                        yield
                }
                yield
        }
        %23 = load %4 : u32i, align 4
        %24 = cast(int_to_bool) %23 : bool
        %25 = const 10 : s32i
        %26 = const 20 : s32i
        select
        store %27, %3, align 4
        scope {
                %36 = load %1 : s32i, align 4
                %37 = const 10 : s32i
                cmp
                if %38 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %33 = load %2 : s32i, align 4
                %34 = const 10 : s32i
                cmp
                if %35 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %30 = load %3 : s32i, align 4
                %31 = const 10 : s32i
                cmp
                if %32 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %28 = const 0 : s32i
        store %28, %0
        %29 = load %0 : s32i
        return %29
}
