clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr86714.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr86714.c" (c, x86_64-unknown-linux-gnu)
global a : s8i[3][2] = ConstArray { ty: Array { element_type: Array { element_type: Named("s8i"), size: 3 }, size: 2 }, elts: Array([ConstArray { ty: Array { element_type: Named("s8i"), size: 3 }, elts: Array([CirInt { ty: Named("s8i"), value: "49" }, CirInt { ty: Named("s8i"), value: "50" }, CirInt { ty: Named("s8i"), value: "51" }]), trailing_zeros_num: 0 }, ConstArray { ty: Array { element_type: Named("s8i"), size: 3 }, elts: Array([CirInt { ty: Named("s8i"), value: "120" }, CirInt { ty: Named("s8i"), value: "121" }, CirInt { ty: Named("s8i"), value: "122" }]), trailing_zeros_num: 0 }]), trailing_zeros_num: 0 } [external, default, align 1, dso_local, constant]
global b : s8i[6] = Zero { ty: Array { element_type: Named("s8i"), size: 6 } } [external, default, align 1, dso_local]
global pb : void* = GlobalView { ty: Pointer { pointee: Named("void"), addr_space: None }, symbol: "b", indices: None } [external, default, align 8, dso_local]
global .str : s8i[7] = ConstArray { ty: Array { element_type: Named("s8i"), size: 7 }, elts: Str("123xaa"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn memcpy(%arg0: void*, %arg1: void*, %arg2: u64i) -> void* [external, c, nothrow];
fn memset(%arg0: void*, %arg1: s32i, %arg2: u64i) -> void* [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn memcmp(%arg0: void*, %arg1: void*, %arg2: u64i) -> s32i [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @b : s8i[6]*
        %3 = cast(array_to_ptrdecay) %2 : s8i*
        %4 = cast(bitcast) %3 : void*
        %5 = get_global @a : s8i[3][2]*
        %6 = cast(array_to_ptrdecay) %5 : s8i[3]*
        %7 = cast(bitcast) %6 : void*
        %8 = const 4 : u64i
        %9 = call @memcpy(%4, %7, %8) : void* [all]
        %10 = get_global @b : s8i[6]*
        %11 = cast(array_to_ptrdecay) %10 : s8i*
        %12 = const 4 : s32i
        ptr_stride
        %14 = cast(bitcast) %13 : void*
        %15 = const 97 : s32i
        %16 = const 2 : u64i
        %17 = call @memset(%14, %15, %16) : void* [all]
        scope {
                %28 = const 0 : s64i
                %29 = get_global @b : s8i[6]*
                get_element
                %31 = load %30 : s8i, align 1
                %32 = cast(integral) %31 : s32i
                %33 = const 49 : s32i
                cmp
                %35 = ternary %34 ? { : bool
                        %79 = const true : bool
                        yield %79
                } : {
                        %72 = const 1 : s64i
                        %73 = get_global @b : s8i[6]*
                        get_element
                        %75 = load %74 : s8i, align 1
                        %76 = cast(integral) %75 : s32i
                        %77 = const 50 : s32i
                        cmp
                        yield %78
                }
                %36 = ternary %35 ? { : bool
                        %71 = const true : bool
                        yield %71
                } : {
                        %64 = const 2 : s64i
                        %65 = get_global @b : s8i[6]*
                        get_element
                        %67 = load %66 : s8i, align 1
                        %68 = cast(integral) %67 : s32i
                        %69 = const 51 : s32i
                        cmp
                        yield %70
                }
                %37 = ternary %36 ? { : bool
                        %63 = const true : bool
                        yield %63
                } : {
                        %56 = const 3 : s64i
                        %57 = get_global @b : s8i[6]*
                        get_element
                        %59 = load %58 : s8i, align 1
                        %60 = cast(integral) %59 : s32i
                        %61 = const 120 : s32i
                        cmp
                        yield %62
                }
                %38 = ternary %37 ? { : bool
                        %55 = const true : bool
                        yield %55
                } : {
                        %48 = const 4 : s64i
                        %49 = get_global @b : s8i[6]*
                        get_element
                        %51 = load %50 : s8i, align 1
                        %52 = cast(integral) %51 : s32i
                        %53 = const 97 : s32i
                        cmp
                        yield %54
                }
                %39 = ternary %38 ? { : bool
                        %47 = const true : bool
                        yield %47
                } : {
                        %40 = const 5 : s64i
                        %41 = get_global @b : s8i[6]*
                        get_element
                        %43 = load %42 : s8i, align 1
                        %44 = cast(integral) %43 : s32i
                        %45 = const 97 : s32i
                        cmp
                        yield %46
                }
                if %39 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %20 = get_global @pb : void**
                %21 = load %20 : void*, align 8
                %22 = get_global @.str : s8i[7]*
                %23 = cast(array_to_ptrdecay) %22 : s8i*
                %24 = cast(bitcast) %23 : void*
                %25 = const 6 : u64i
                %26 = call @memcmp(%21, %24, %25) : s32i [all]
                %27 = cast(int_to_bool) %26 : bool
                if %27 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %18 = const 0 : s32i
        store %18, %0
        %19 = load %0 : s32i
        return %19
}
