clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr86844.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr86844.c" (c, x86_64-unknown-linux-gnu)
global __const.main.a : s32i[2] = ConstArray { ty: Array { element_type: Named("s32i"), size: 2 }, elts: Array([CirInt { ty: Named("s32i"), value: "-1" }]), trailing_zeros_num: 1 } [cir_private, default, dso_local, constant]

fn foo(%arg0: s32i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*):
        %55 = alloca s32i*, "p", align 8
        store %arg0, %55
        %56 = const 0 : s32i
        %57 = load %55 : s32i*, align 8
        store %56, %57, align 4
        %58 = const 1 : s8i
        %59 = load %55 : s32i*, align 8
        %60 = cast(bitcast) %59 : s8i*
        %61 = const 3 : s32i
        ptr_stride
        store %58, %62, align 1
        %63 = const 2 : s8i
        %64 = load %55 : s32i*, align 8
        %65 = cast(bitcast) %64 : s8i*
        %66 = const 1 : s32i
        ptr_stride
        store %63, %67, align 1
        %68 = load %55 : s32i*, align 8
        %69 = cast(bitcast) %68 : s8i*
        %70 = const 6 : s32i
        ptr_stride
        %72 = load %71 : s8i, align 1
        %73 = load %55 : s32i*, align 8
        %74 = cast(bitcast) %73 : s8i*
        %75 = const 2 : s32i
        ptr_stride
        store %72, %76, align 1
        return
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i[2], "a", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @__const.main.a : s32i[2]*
        copy
        scope {
                %50 = const 4 : u64i
                %51 = const 4 : u64i
                cmp
                if %52 {
                        %53 = const 0 : s32i
                        store %53, %0
                        %54 = load %0 : s32i
                        return %54
                }
                yield
        }
        %4 = const 3 : s8i
        %5 = const 6 : s64i
        %6 = cast(array_to_ptrdecay) %1 : s32i*
        %7 = cast(bitcast) %6 : s8i*
        ptr_stride
        store %4, %8, align 1
        %9 = cast(array_to_ptrdecay) %1 : s32i*
        call @foo(%9) [all]
        scope {
                %12 = const 0 : s64i
                %13 = cast(array_to_ptrdecay) %1 : s32i*
                %14 = cast(bitcast) %13 : s8i*
                ptr_stride
                %16 = load %15 : s8i, align 1
                %17 = cast(integral) %16 : s32i
                %18 = const 0 : s32i
                cmp
                %20 = ternary %19 ? { : bool
                        %49 = const true : bool
                        yield %49
                } : {
                        %41 = const 1 : s64i
                        %42 = cast(array_to_ptrdecay) %1 : s32i*
                        %43 = cast(bitcast) %42 : s8i*
                        ptr_stride
                        %45 = load %44 : s8i, align 1
                        %46 = cast(integral) %45 : s32i
                        %47 = const 2 : s32i
                        cmp
                        yield %48
                }
                %21 = ternary %20 ? { : bool
                        %40 = const true : bool
                        yield %40
                } : {
                        %32 = const 2 : s64i
                        %33 = cast(array_to_ptrdecay) %1 : s32i*
                        %34 = cast(bitcast) %33 : s8i*
                        ptr_stride
                        %36 = load %35 : s8i, align 1
                        %37 = cast(integral) %36 : s32i
                        %38 = const 3 : s32i
                        cmp
                        yield %39
                }
                %22 = ternary %21 ? { : bool
                        %31 = const true : bool
                        yield %31
                } : {
                        %23 = const 3 : s64i
                        %24 = cast(array_to_ptrdecay) %1 : s32i*
                        %25 = cast(bitcast) %24 : s8i*
                        ptr_stride
                        %27 = load %26 : s8i, align 1
                        %28 = cast(integral) %27 : s32i
                        %29 = const 1 : s32i
                        cmp
                        yield %30
                }
                if %22 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %10 = const 0 : s32i
        store %10, %0
        %11 = load %0 : s32i
        return %11
}
